src/objects/RedBoxSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CustomFilter__c</fullName>
        <description>This field is for custom extraction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter filter criteria for custom extraction like 	
EDP_RBID =2978 if its an integer field and like CurrencyID=&quot;EUR&quot; if its a string field. Use only characters =,!=. If you have multiple criteria, separate it by &apos;,&apos;</inlineHelpText>
        <label>Custom Filters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to overwrite the dataset.</inlineHelpText>
        <label>Overwrite Dataset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartPeriod__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For single period data extraction from EDP, define the value as MM.YYYY. For example 07.2018.
For extracting multiple periods from EDP, define each period separated by comma. For example 07.2018, 08.2018.</inlineHelpText>
        <label>Redbox Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RedBox_Settings</label>
</CustomObject>